--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "express": "^4.18.2",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.1",
     "notiflix": "^3.2.5",
