--- a/package.json
+++ b/package.json
@@ -47,5 +47,9 @@
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
+  },
+  "engines": {
+    "node": "18.10.0",
+    "npm": "8.19.2"
   }
 }
