--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^7.6.1",
     "notiflix": "^3.2.5",
     "react": "^18.2.0",
+    "react-best-gradient-color-picker": "^2.1.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-lineicons": "^3.0.0",
