--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "express": "^4.18.2",
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.3.3",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.1",
     "notiflix": "^3.2.5",
