--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@remotion/cli": "^3.3.4",
+    "@remotion/eslint-config": "^3.3.4",
+    "@remotion/eslint-plugin": "^3.3.4",
+    "@remotion/player": "^3.3.4",
+    "@remotion/renderer": "^3.3.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +19,7 @@
     "flowbite-react": "^0.3.3",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.1",
+    "html-canvas": "^0.0.4",
     "notiflix": "^3.2.5",
     "react": "^18.2.0",
     "react-best-gradient-color-picker": "^2.1.6",
@@ -22,12 +28,14 @@
     "react-lineicons": "^3.0.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "remotion": "^3.3.4",
     "serve": "^14.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
   "scripts": {
     "dev": "react-scripts start",
+    "video": "remotion preview src/remotion/index.ts",
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
