--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@remotion/cli": "^3.3.6",
-    "@remotion/lambda": "^3.3.6",
-    "@remotion/player": "^3.3.6",
+    "@remotion/cli": "^3.3.5",
+    "@remotion/google-fonts": "^3.3.5",
+    "@remotion/lambda": "^3.3.5",
+    "@remotion/player": "^3.3.5",
     "aos": "^2.3.4",
     "axios": "^1.2.0",
     "formik": "^2.2.9",
@@ -21,7 +22,7 @@
     "react": "18.2.0",
     "react-best-gradient-color-picker": "^2.1.11",
     "react-dom": "18.2.0",
-    "remotion": "^3.3.6",
+    "remotion": "^3.3.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
