--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@remotion/player": "^3.3.5",
     "aos": "^2.3.4",
     "axios": "^1.2.0",
+    "flowbite": "^1.5.5",
+    "flowbite-react": "^0.3.7",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.17",
     "next": "13.0.5",
