--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^7.6.17",
     "next": "13.0.5",
+    "nextjs-progressbar": "^0.0.16",
     "notiflix": "^3.2.5",
     "react": "18.2.0",
     "react-best-gradient-color-picker": "^2.1.11",
